Add empty functions from the remaining tasks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(Car_Hiring_System)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.c struct.h user.h auth.h print.h)
+set(SOURCE_FILES main.c struct.h user.h auth.h print.h car.h)
 add_executable(Car_Hiring_System ${SOURCE_FILES})
